--- a/index.html
+++ b/index.html
@@ -225,11 +225,14 @@ REM AMAZING.BAS
 	<a href="http://github.com/jefftranter/6502/tree/master/asm/a1basic" target="_blank">
 		Integer Basic (Woz)
 	</a><br />
-	<a href="https://github.com/jefftranter/6502/tree/master/asm/wozmon" target="_blank">
+	<a href="http://github.com/jefftranter/6502/tree/master/asm/wozmon" target="_blank">
 		Woz Monitor
 	</a><br />
 	<a href="README.html" target="_blank">
 		Readme
+	</a><br />
+	<a href="http://rhoem1.github.io/webApple1" target="_blank">
+		Github Project
 	</a><br />
 		
 	</body>
